# customneuralnetworks

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  STYLE_GUIDE.md  gitignore  main.c++
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docs.yml  release.yml  security.yml
benchmark/: neural_network_benchmark.cpp
docs/: architecture.md  chatgpt.md  gemini.md  grok.md  perplexity.md
include/: DenseLayer.hpp  Layer.hpp  Model.hpp  NeuralNetwork.h++  NeuralNetwork.hpp  ReLU.hpp
src/: DenseLayer.cpp  Model.cpp  NeuralNetwork.c++  NeuralNetwork.cpp  ReLU.cpp
tests/: CMakeLists.txt  neural_network_test.cpp
